load property file version issue and inner class $ issue