@@ -5,6 +5,7 @@ import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -16,6 +17,8 @@ import java.util.Set;
 import java.util.concurrent.BlockingQueue;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import org.eclipse.jface.action.IStatusLineManager;
 import org.eclipse.swt.SWT;
@@ -715,8 +718,12 @@ public class FSMPropertyChecker extends ViewPart {
 			return;
 		propertyFileText.setText(fileName);
 		try {
-			String content = Files.readString(Path.of(fileName));
-			System.out.println("Property Content : \n"+content);
+			Path path = Paths.get(fileName);
+			Stream<String> lines = Files.lines(path);
+		    String content = lines.collect(Collectors.joining("\n"));
+		    System.out.println("Property Content : \n"+content);
+		    lines.close();
+			
 			propertyText.setText(content);
 		}
 		catch(IOException ex)
